<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_user_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/tool_bar_ground"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/back_white" />

        <TextView
            android:id="@+id/login_user_tool_bar_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:text=""
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>



    <ImageView
        android:id="@+id/login_user_imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/id_card" />

    <TextView
        android:id="@+id/login_user_text_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/login_user_text_view_bold"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/login_user_text_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:text="@string/login_user_text_view_normal"
        android:textColor="#65000000"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/login_user_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="14"
        android:textStyle="bold"
        android:textSize="18sp"
        android:hint="@string/login_user_edit_text"
        android:layout_marginTop="30dp"
        android:inputType="number"
        android:layout_marginHorizontal="10dp"/>

    <Button
        android:id="@+id/login_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_background"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/login_user_button" />



</LinearLayout>